option('goabackend', type: 'boolean', value: true, description: 'Enable goabackend library')
option('inspector', type: 'boolean', value: false, description: 'Enable a WebKitWebInspector for the embedded web view')

option('exchange', type: 'boolean', value: true, description: 'Enable Microsoft Exchange provider')

option('facebook', type: 'boolean', value: true, description: 'Enable Facebook provider')
option('facebook_client_id', type: 'string', value: '297654143624603', description: 'Facebook OAuth 2.0 client id')

option('flickr', type: 'boolean', value: true, description: 'Enable Flickr provider')
option('flickr_consumer_key', type: 'string', value: 'ed00ad7e0869897506e23c0d18e34d01', description: 'Flickr OAuth 1.0 consumer key')
option('flickr_consumer_secret', type: 'string', value: 'ebd556dd187188b1', description: 'Flickr OAuth 1.0 consumer secret')

option('foursquare', type: 'boolean', value: true, description: 'Enable Foursquare provider')
option('foursquare_client_id', type: 'string', value: 'MBNU2NES5HASNDQJ25YPFGG2UGRZHPI3IYTNJGE0KIWT2HCF', description: 'Foursquare OAuth 2.0 client id')

option('google', type: 'boolean', value: true, description: 'Enable Google provider')
option('google_client_id', type: 'string', value: '44438659992-7kgjeitenc16ssihbtdjbgguch7ju55s.apps.googleusercontent.com', description: 'Google OAuth 2.0 client id')
option('google_client_secret', type: 'string', value: '-gMLuQyDiI0XrQS_vx_mhuYF', description: 'Google OAuth 2.0 client secret')

option('imap_smtp', type: 'boolean', value: true, description: 'Enable IMAP/SMTP provider')

option('kerberos', type: 'boolean', value: true, description: 'Enable kerberos provider')

option('lastfm', type: 'boolean', value: false, description: 'Enable Last.fm provider')
option('lastfm_client_id', type: 'string', value: '7a2461fe34c9c8124fb28ac750ba12fa', description: 'Last.fm client id')
option('lastfm_client_secret', type: 'string', value: '49ec391644459c417f3afe57ca246c5a', description: 'Last.fm client secret')

option('media_server', type: 'boolean', value: false, description: 'Enable Media Server provider')

option('owncloud', type: 'boolean', value: true, description: 'Enable ownCloud provider')

option('pocket', type: 'boolean', value: true, description: 'Enable Pocket provider')
option('pocket_client_id', type: 'string', value: '16630-40b25246b56e8ad5310b2883', description: 'Pocket OAuth 2.0 client id')

option('todoist', type: 'boolean', value: false, description: 'Enable Todoist provider')
option('todoist_client_id', type: 'string', value: '2e41575c1dd74f98ad7cfb178e1ba3dd', description: 'Todoist OAuth 2.0 client id')
option('todoist_client_secret', type: 'string', value: '3e59831ffdd64633918d19aa0a1efd2b', description: 'Todoist client secret')

option('windows_live', type: 'boolean', value: true, description: 'Enable Windows Live provider')
option('windows_live_client_id', type: 'string', value: '0000000044067703', description: 'Windows Live OAuth 2.0 client id')

option('gtk_doc', type: 'boolean', value: false, description: 'use gtk_doc to build documentation')
option('introspection', type: 'boolean', value: true, description: 'Enable GObject Introspection (depends on GObject)')
option('man', type: 'boolean', value: false, description: 'enable man pages')
option('template_file', type: 'string', value: '', description: 'Path to the template file')
option('vapi', type: 'boolean', value: true, description: 'build Vala binding')
